Внес правку по удалению списка в index.html

--- a/index.html
+++ b/index.html
@@ -59,21 +59,21 @@
           </div>
           <img class="blog-article-img" alt="Городок Седона" src="images/article-1.jpg" width="800" height="385">
         </article>
-        <h2 class="visually-hidden">Преимущества</h2>
-        <ul class="advantages">
-          <li class="advantages-item">
+        <section class="advantages">
+          <h2 class="visually-hidden">Преимущества</h2>
+          <article class="advantages-item">
             <h3>Небольшая<br>площадь</h3>
             <p>Все достопримечательности находятся очень близко</p>
-          </li>
-          <li class="advantages-item advantages-item-background">
+          </article>
+          <article class="advantages-item advantages-item-background">
             <h3>Красивая<br> дорога</h3>
             <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
-          <li class="advantages-item">
+          </article>
+          <article class="advantages-item">
             <h3>Мало<br> туристов</h3>
             <p>Большинство едет в Гранд Каньон и толпится там</p>
-          </li>
-        </ul>
+          </article>
+        </section>
         <article class="blog-article blog-article-2">
           <div class="blog-article-description">
             <h3>Там есть <br> мост дьявола</h3>
@@ -85,27 +85,21 @@
           <h2 class="greeting-title">Приезжайте в Седону отдохнуть <br>в комфорте и уюте!</h2>
           <p class="greeting-description">Опытный персонал и качественное обслуживание!</p>
         </article>
-        <h2 class="visually-hidden">Больше преимуществ</h2>
-        <ul class="advantages">
-          <li class="advantages-item-icons advantages-item-icons-background">
-            <div class="advantages-description-wrapper advantage-icon-habitation">
-              <h3>Жильё</h3>
-              <p>Рекомендуем пожить <br>в настоящем мотеле, <br>всё как в кино!</p>
-            </div>
-          </li>
-          <li class="advantages-item-icons">
-            <div class="advantages-description-wrapper advantage-icon-food">
-              <h3>Еда</h3>
-              <p>Всегда заказывайте <br>топовый фирменный бургер, <br>вы не разочаруетесь!</p>
-            </div>
-          </li>
-          <li class="advantages-item-icons advantages-item-icons-background">
-            <div class="advantages-description-wrapper advantage-icon-present">
-              <h3>Сувениры</h3>
-              <p>Не только китайского, <br>но и настоящего местного производства!</p>
-            </div>
-          </li>
-        </ul>
+        <section class="advantages">
+          <h2 class="visually-hidden">Больше преимуществ</h2>
+          <article class="advantages-item-icons advantages-item-icons-background advantage-icon-habitation">
+            <h3>Жильё</h3>
+            <p>Рекомендуем пожить <br>в настоящем мотеле, <br>всё как в кино!</p>
+          </article>
+          <article class="advantages-item-icons advantage-icon-food">
+            <h3>Еда</h3>
+            <p>Всегда заказывайте <br>топовый фирменный бургер, <br>вы не разочаруетесь!</p>
+          </article>
+          <article class="advantages-item-icons advantages-item-icons-background advantage-icon-present">
+            <h3>Сувениры</h3>
+            <p>Не только китайского, <br>но и настоящего местного производства!</p>
+          </article>
+        </section>
         <section class="suggestion">
           <h2>Заинтересовались?</h2>
           <p>Укажите предполагаемые даты поездки, <br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
