Вводит незначительные правки с инпутами цены

--- a/catalog.html
+++ b/catalog.html
@@ -115,12 +115,12 @@
                 <legend>Стоимость, ₽:</legend>
                 <div class="form-text-wrapper">
                   <div class="form-text">
-                    <input id="filter-form" type="number" name="filter-min" class="input-min" value="0">
-                    <label class="static-value">от</label>
+                    <input id="filter-form-min" type="number" name="filter-min" class="input-min" value="0">
+                    <label for="filter-form-min" class="static-value">от</label>
                   </div>
                   <div class="form-text">
-                    <input id="filter-form" type="number" name="filter-max" class="input-max" value="9000">
-                    <label class="static-value">до</label>
+                    <input id="filter-form-max" type="number" name="filter-max" class="input-max" value="9000">
+                    <label for="filter-form-max" class="static-value">до</label>
                   </div>
                 </div>
                 <div class="slider">
@@ -250,15 +250,10 @@
         </section>
         <section class="page-switch">
           <a class="switch-button switch-button-current">1</a>
-
           <a class="switch-button" href="#">2</a>
-
           <a class="switch-button" href="#">3</a>
-
           <a class="switch-button" href="#">4</a>
-
           <p class="switch-button pages-count">...</p>
-
           <a class="switch-button" href="#">10</a>
         </section>
         <section class="newsletter-catalog">
