Добавляет тултип в модальном окне
Также вносит небольшие правки

--- a/index.html
+++ b/index.html
@@ -167,10 +167,11 @@
               </div>
 
                <label for="child-number" class="date-title child-title">Дети:</label>
-               <div class="circle-information">
+               <div class="tooltip">
                   <svg width="20" height="20" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M9 4h2v2H9V4Zm2 12H9V7h2v9Z" fill="#fff"/>
                   </svg>
+                  <span class="tooltip-text">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
                </div>
                <div class="container">
                 <button class="minus" id="decrement">
