--- a/catalog.html
+++ b/catalog.html
@@ -288,5 +288,7 @@
         <a class="footer-logo-copyright" href="https://htmlacademy.ru/"></a>
       </footer>
     </div>
+
+    <script defer src="js/slider.js"></script>
   </body>
 </html>
