Добавляет микро правку для скринридеров

--- a/catalog.html
+++ b/catalog.html
@@ -180,8 +180,7 @@
               <b>От 4000 ₽</b>
               <a class="button description-card-button" href="#">Подробнее</a>
               <a class="button description-card-button to-favorites-button" href="#">В избранное</a>
-              <h4 class="visually-hidden">Четырёхзвездочая гостиница</h4>
-              <ul class="stars-count">
+              <ul class="stars-count" aria-label="четырёхзвездочная гостиница">
                 <li></li>
                 <li></li>
                 <li></li>
@@ -200,8 +199,7 @@
               <b>От 5000 ₽</b>
               <a class="button description-card-button" href="#">Подробнее</a>
               <a class="button description-card-button to-favorites-button desired" href="#">В избранном</a>
-              <h4 class="visually-hidden">Четырёхзвездочая гостиница</h4>
-              <ul class="stars-count">
+              <ul class="stars-count" aria-label="четырёхзвездочная гостиница">
                 <li></li>
                 <li></li>
                 <li></li>
@@ -220,8 +218,7 @@
               <b>От 2500 ₽</b>
               <a class="button description-card-button" href="#">Подробнее</a>
               <a class="button description-card-button to-favorites-button" href="#">В избранное</a>
-              <h4 class="visually-hidden">Трёхзвездочая гостиница</h4>
-              <ul class="stars-count">
+              <ul class="stars-count" aria-label="трёхзвездочная гостиница">
                 <li></li>
                 <li></li>
                 <li></li>
@@ -239,8 +236,7 @@
               <b>От 1500 ₽</b>
               <a class="button description-card-button" href="#">Подробнее</a>
               <a class="button description-card-button to-favorites-button" href="#">В избранное</a>
-              <h4 class="visually-hidden">Двухзвёздочная гостиница</h4>
-              <ul class="stars-count">
+              <ul class="stars-count" aria-label="двухзвездочная гостиница">
                 <li></li>
                 <li></li>
               </ul>
