--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <img class="preview-sedona" alt="welcome to the gorgeous Sedona"src="images/preview-header.svg" width="458" height="352">
         </div>
         <article class="greeting">
-          <h2>Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</h2>
+          <h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
           <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         </article>
         <article class="blog-article">
@@ -62,52 +62,52 @@
         <section class="advantages">
           <h2 class="visually-hidden">Преимущества</h2>
           <article class="advantages-item">
-            <h3>Небольшая<br>площадь</h3>
+            <h3>Небольшая площадь</h3>
             <p>Все достопримечательности находятся очень близко</p>
           </article>
           <article class="advantages-item advantages-item-background">
-            <h3>Красивая<br> дорога</h3>
+            <h3>Красивая дорога</h3>
             <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </article>
           <article class="advantages-item">
-            <h3>Мало<br> туристов</h3>
+            <h3>Мало туристов</h3>
             <p>Большинство едет в Гранд Каньон и толпится там</p>
           </article>
         </section>
         <article class="blog-article blog-article-2">
           <div class="blog-article-description">
-            <h3>Там есть <br> мост дьявола</h3>
+            <h3>Там есть мост&nbsp;дьявола</h3>
             <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </div>
           <img class="blog-article-img" alt="Пейзаж Седоны" src="images/article-2.jpg" width="800" height="385">
         </article>
         <article class="greeting greeting-2">
-          <h2 class="greeting-title">Приезжайте в Седону отдохнуть <br>в комфорте и уюте!</h2>
+          <h2 class="greeting-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
           <p class="greeting-description">Опытный персонал и качественное обслуживание!</p>
         </article>
         <section class="advantages">
           <h2 class="visually-hidden">Больше преимуществ</h2>
           <article class="advantages-item-icons advantages-item-icons-background advantage-icon-habitation">
             <h3>Жильё</h3>
-            <p>Рекомендуем пожить <br>в настоящем мотеле, <br>всё как в кино!</p>
+            <p>Рекомендуем пожить в&nbsp;настоящем мотеле, всё&nbsp;как&nbsp;в кино!</p>
           </article>
           <article class="advantages-item-icons advantage-icon-food">
             <h3>Еда</h3>
-            <p>Всегда заказывайте <br>топовый фирменный бургер, <br>вы не разочаруетесь!</p>
+            <p>Всегда заказывайте топовый&nbsp;фирменный бургер, вы&nbsp;не&nbsp;разочаруетесь!</p>
           </article>
           <article class="advantages-item-icons advantages-item-icons-background advantage-icon-present">
             <h3>Сувениры</h3>
-            <p>Не только китайского, <br>но и настоящего местного производства!</p>
+            <p>Не только китайского, но&nbsp;и&nbsp;настоящего местного производства!</p>
           </article>
         </section>
         <section class="suggestion">
           <h2>Заинтересовались?</h2>
-          <p>Укажите предполагаемые даты поездки, <br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <p>Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем&nbsp;вам&nbsp;лучшие предложения гостиниц в Седоне</p>
           <button id="modal-open-button" class="button registration">Поиск гостиницы в Седоне</button>
         </section>
         <section class="newsletter">
           <h2>Подпишитесь на рассылку</h2>
-          <p>Только полезная информация и никакого спама, <br>честное бойскаутское!</p>
+          <p>Только полезная информация и никакого спама, честное&nbsp;бойскаутское!</p>
           <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
             <input class="newsletter-text" type="email" id="newsletter-mail" name="newsletter-mail" placeholder="Ваш e-mail">
             <button class="button newsletter-button" type="submit">Подписаться</button>
