Вносит правки с курсором

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         </ul>
         <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
         <a class="footer-logo-copyright" href="https://htmlacademy.ru/">
-          <svg width="115" height="34" class="lalala">
+          <svg width="115" height="34">
             <use xlink:href="#testicon"></use>
           </svg>
         </a>
