--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     <path d="M3 9v2h14V9H3Z" fill="currentColor"/>
                   </svg>
                 </button>
-                <input id="adults-number" class="number-input" type="number" min="0" max="100" step="1" value="2" name="adults-counter">
+                <input id="adults-number" class="number-input" type="number" min="0" max="20" step="1" value="1" name="adults-counter">
                 <button class="counter__button plus" id="increment" type="button">
                   <svg width="20" height="20" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M17 9h-6V3H9v6H3v2h6v6h2v-6h6V9Z" fill="currentColor"/>
@@ -185,7 +185,7 @@
                     <path d="M3 9v2h14V9H3Z" fill="currentColor"/>
                   </svg>
                 </button>
-                <input id="adults-number" class="number-input" type="number" min="0" max="100" step="1" value="2" name="child-counter">
+                <input id="child-number" class="number-input" type="number" min="0" max="20" step="1" value="1" name="child-counter">
                 <button class="counter__button plus" id="increment" type="button">
                   <svg width="20" height="20" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M17 9h-6V3H9v6H3v2h6v6h2v-6h6V9Z" fill="currentColor"/>
