--- a/catalog.html
+++ b/catalog.html
@@ -114,7 +114,7 @@
                 <legend>Стоимость, ₽:</legend>
                 <div class="form-text-wrapper">
                   <div class="form-text">
-                    <input id="filter-form-min" type="number" name="filter-min" class="inputf-min" value="0">
+                    <input id="filter-form-min" type="number" name="filter-min" class="input-min" value="0">
                     <label for="filter-form-min" class="static-value">от</label>
                   </div>
                   <div class="form-text">
