--- a/catalog.html
+++ b/catalog.html
@@ -89,21 +89,21 @@
                 <ul class="catalog-filter-list">
                   <li>
                     <label class="control">
-                      <input class="visually-hidden control-input-radio" type="radio" for="filter-form" name="category" checked>
+                      <input class="visually-hidden control-input-radio" type="radio" name="category" checked>
                       <span class="control-mark-radio"></span>
                       <span class="control-label">Гостиница</span>
                     </label>
                   </li>
                   <li>
                     <label class="control">
-                      <input class="visually-hidden control-input-radio" type="radio" for="filter-form" name="category">
+                      <input class="visually-hidden control-input-radio" type="radio" name="category">
                       <span class="control-mark-radio"></span>
                       <span class="control-label">Мотель</span>
                     </label>
                   </li>
                   <li>
                     <label class="control">
-                      <input class="visually-hidden control-input-radio" type="radio" for="filter-form" name="category">
+                      <input class="visually-hidden control-input-radio" type="radio" name="category">
                       <span class="control-mark-radio"></span>
                       <span class="control-label">Апартаменты</span>
                     </label>
@@ -185,7 +185,7 @@
                 <li></li>
                 <li></li>
               </ul>
-              <p class="rating" href="#">Рейтинг: 8,5</p>
+              <p class="rating">Рейтинг: 8,5</p>
             </li>
             <li class="product-item">
               <a class="product-card-link-image" href="#">
@@ -204,7 +204,7 @@
                 <li></li>
                 <li></li>
               </ul>
-              <p class="rating" href="#">Рейтинг: 9,2</p>
+              <p class="rating">Рейтинг: 9,2</p>
             </li>
             <li class="product-item">
               <a class="product-card-link-image" href="#">
@@ -222,7 +222,7 @@
                 <li></li>
                 <li></li>
               </ul>
-              <p class="rating" href="#">Рейтинг: 6,9</p>
+              <p class="rating">Рейтинг: 6,9</p>
             </li>
             <li class="product-item">
               <a class="product-card-link-image" href="#">
@@ -239,7 +239,7 @@
                 <li></li>
                 <li></li>
               </ul>
-              <p class="rating" href="#">Рейтинг: 5,0</p>
+              <p class="rating">Рейтинг: 5,0</p>
             </li>
           </ul>
         </section>
