--- a/catalog.html
+++ b/catalog.html
@@ -18,26 +18,35 @@
               <a class="navigation-link" href="index.html">Главная</a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link" href="about.html">О Седоне</a>
+              <a class="navigation-link" href="https://ru.wikipedia.org/wiki/%D0%A1%D0%B5%D0%B4%D0%BE%D0%BD%D0%B0" target="_blank">О Седоне</a>
             </li>
             <li class="navigation-item">
               <a class="navigation-link navigation-link-current" href="#">Гостиницы</a>
             </li>
           </ul>
-          <a class="search-icon-nav" href="#">
-            <span class="visually-hidden">
-               Поиск
-            </span>
-          </a>
-          <a class="card-icon-nav" href="#">
-            <span class="visually-hidden">
-              Избранные
-             </span>
-            <div class="card-counts">
-              <span class="card-counts-number">12</span>
-            </div>
-          </a>
-          <a class="button booking" href="#">Хочу сюда!</a>
+
+          <ul class="navigation-user-list">
+            <li class="navigation-user-item">
+              <a class="search-icon-nav" href="#"></a>
+                <span class="visually-hidden">
+                  Поиск
+                </span>
+              </a>
+            </li>
+            <li class="navigation-user-item">
+              <a class="card-icon-nav" href="#"></a>
+                <span class="visually-hidden">
+                  Избранные
+                </span>
+                <div class="card-counts">
+                  <span class="card-counts-number">12</span>
+                </div>
+              </a>
+            </li>
+            <li class="navigation-user-item">
+              <a class="button booking" href="#">Хочу сюда!</a>
+            </li>
+          </ul>
         </nav>
       </header>
 
