--- a/catalog.html
+++ b/catalog.html
@@ -200,7 +200,7 @@
               <p>Гостиница</p>
               <b>От 5000 ₽</b>
               <a class="button description-card-button" href="#">Подробнее</a>
-              <a class="button description-card-button to-favorites-button desired" href="#">В избранном</a>
+              <a class="button description-card-button desired" href="#">В избранном</a>
               <ul class="stars-count" aria-label="четырёхзвездочная гостиница">
                 <li></li>
                 <li></li>
@@ -258,7 +258,7 @@
           <h2>Подпишитесь на рассылку</h2>
           <p>Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
           <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
-            <input class="newsletter-text" type="email" id="newsletter-mail" name="newsletter-mail" placeholder="Ваш e-mail">
+            <input class="newsletter-text" type="email" id="newsletter-mail" name="newsletter-mail" placeholder="Ваш e-mail" required>
             <button class="button newsletter-button" type="submit">Подписаться</button>
           </form>
         </section>
