--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
         </ul>
         <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
         <a class="footer-logo-copyright" href="https://htmlacademy.ru/">
+          <span class="visually-hidden">Логотип создателя сайта</span>
           <svg width="115" height="34">
             <use xlink:href="#logo-academy"></use>
           </svg>
@@ -154,6 +155,7 @@
         <section class="modal-content">
           <h2>поиск гостиницы в седоне</h2>
           <button class="close-modal" type="button">
+            <span class="visually-hidden">Закрыть модальное окно</span>
             <svg width="15" height="15">
               <use xlink:href="#close-btn"></use>
             </svg>
@@ -169,12 +171,14 @@
             <div class="guests-number-wrapper">
               <div class="container-counter">
                 <button class="minus" id="decrement-adults" type="button">
+                  <span class="visually-hidden">Уменьшить количество</span>
                   <svg width="20" height="20">
                     <use xlink:href="#minus-btn"></use>
                   </svg>
                 </button>
                 <input id="adults-number" class="number-input" type="number" min="0" max="10" step="1" value="1" name="adults-counter">
                 <button class="plus" id="increment-adults" type="button">
+                  <span class="visually-hidden">Увеличить количество</span>
                   <svg width="20" height="20">
                     <use xlink:href="#plus-btn"></use>
                   </svg>
@@ -190,12 +194,14 @@
                </div>
                <div class="container-counter">
                 <button class="minus" id="decrement-childs" type="button">
+                  <span class="visually-hidden">Уменьшить количество</span>
                   <svg width="20" height="20">
                     <use xlink:href="#minus-btn"></use>
                   </svg>
                 </button>
                 <input id="childs-number" class="number-input" type="number" min="0" max="10" step="1" value="1" name="child-counter">
                 <button class="plus" id="increment-childs" type="button">
+                  <span class="visually-hidden">Увеличить количество</span>
                   <svg width="20" height="20">
                     <use xlink:href="#plus-btn"></use>
                   </svg>
