Добавляет правки в интерактив пагинации в модальном окне

--- a/index.html
+++ b/index.html
@@ -172,14 +172,14 @@
               <div class="container-counter">
                 <button class="minus" id="decrement-adults" type="button">
                   <span class="visually-hidden">Уменьшить количество</span>
-                  <svg width="20" height="20">
+                  <svg class="svg-outline" width="20" height="20">
                     <use xlink:href="#minus-btn"></use>
                   </svg>
                 </button>
                 <input id="adults-number" class="number-input" type="number" min="0" max="10" step="1" value="1" name="adults-counter">
                 <button class="plus" id="increment-adults" type="button">
                   <span class="visually-hidden">Увеличить количество</span>
-                  <svg width="20" height="20">
+                  <svg class="svg-outline" width="20" height="20">
                     <use xlink:href="#plus-btn"></use>
                   </svg>
                 </button>
@@ -195,14 +195,14 @@
                <div class="container-counter">
                 <button class="minus" id="decrement-childs" type="button">
                   <span class="visually-hidden">Уменьшить количество</span>
-                  <svg width="20" height="20">
+                  <svg class="svg-outline" width="20" height="20">
                     <use xlink:href="#minus-btn"></use>
                   </svg>
                 </button>
                 <input id="childs-number" class="number-input" type="number" min="0" max="10" step="1" value="1" name="child-counter">
                 <button class="plus" id="increment-childs" type="button">
                   <span class="visually-hidden">Увеличить количество</span>
-                  <svg width="20" height="20">
+                  <svg class="svg-outline" width="20" height="20">
                     <use xlink:href="#plus-btn"></use>
                   </svg>
                 </button>
