Добавляет правки с валидатора

--- a/catalog.html
+++ b/catalog.html
@@ -27,14 +27,14 @@
 
           <ul class="navigation-user-list">
             <li class="navigation-user-item">
-              <a class="search-icon-nav" href="#"></a>
+              <a class="search-icon-nav" href="#">
                 <span class="visually-hidden">
                   Поиск
                 </span>
               </a>
             </li>
             <li class="navigation-user-item">
-              <a class="card-icon-nav" href="#"></a>
+              <a class="card-icon-nav" href="#">
                 <span class="visually-hidden">
                   Избранные
                 </span>
