--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 
           <ul class="navigation-user-list">
             <li class="navigation-user-item">
-              <a class="search-icon-nav" href="#"></a>
+              <a class="search-icon-nav" href="#">
                 <span class="visually-hidden">
                   Поиск
                 </span>
               </a>
             </li>
             <li class="navigation-user-item">
-              <a class="card-icon-nav" href="#"></a>
+              <a class="card-icon-nav" href="#">
                 <span class="visually-hidden">
                   Избранные
                 </span>
@@ -185,8 +185,9 @@
                 </button>
               </div>
 
-               <label for="child-number" class="date-title child-title">Дети:</label>
-               <div class="tooltip" aria-labelledby="tooltip-label-date">
+               <label for="childs-number" class="date-title child-title">Дети:</label>
+               <div class="tooltip">
+                <span class="visually-hidden">Дополнительная информация</span>
                  <svg width="20" height="20">
                    <use xlink:href="#tooltip-btn"></use>
                  </svg>
